--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-boilerplate",
+  "name": "flavor-logs-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,19 +11,27 @@
     "deploy": "git push heroku master"
   },
   "keywords": [],
+  "engines": {
+    "node": "10.16.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "helmet": "^3.20.0",
-    "morgan": "^1.9.1"
+    "helmet": "^3.21.2",
+    "knex": "^0.20.5",
+    "morgan": "^1.9.1",
+    "pg": "^7.16.1",
+    "winston": "^3.2.1",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.19.1",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^4.0.2"
   }
 }
